# falcon-7b-finetuning

./: .gitignore  .pre-commit-config.yaml  001_Fine_tuning_and_Inference_with_Falcon_7B_using_TRL_and_QLoRa.py  CONTRIBUTING.md  README.md  dvc.yaml  environment.yml  pyproject.toml  quick_train.sh  requirements.txt  run_training.sh  setup.py  test_model_load.py
.github/workflows/: ci.yml
configs/data/: data.yaml
configs/model/: falcon-7b.yaml  model.yaml
configs/training/: default.yaml  wandb.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: train.py  train_with_wandb.py
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessor.py
src/models/: __init__.py  base.py  falcon.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  reproducibility.py  wandb_utils.py
tests/: __init__.py
tests/test_utils/: test_config.py  test_wandb_utils.py
